# 2d-experiments

./: CMakeLists.txt  COMPILER WARNING.txt  README.md  _CMAKE_README  clion code style settings.xml  cpu rendering.txt  gpu shaders.txt  movement.txt  sparse images.txt  vcpkg.json
concepts/: Func.hpp  callable_type_helpers.hpp  func.hpp
src/: CpuDepthVolume.hpp  CpuFrameBuffer.hpp  CpuImageWithDepth.hpp  CpuSparseImageWithDepth.hpp  MovementVectors.hpp  clip.hpp  copySubImageWithDepth.hpp  directions.hpp  drawDepthVolumePlain.hpp  drawSparseWithDepth.hpp  drawWithDepth.hpp  drawWithoutDepth.hpp  gradient.hpp  main.cpp  makeGradient.hpp  measureImageBounds.hpp  noisyDiffuse.hpp  raycasting.hpp  raycasting_csg.hpp  raycasting_shapes.hpp  simdtest.cpp
src/drawing/: blendArgb.hpp  clip.hpp  drawDepthVolume.hpp  drawDepthVolumePlain.hpp  drawWithDepth.hpp  drawWithoutDepth.hpp
src/drawing/blending/: MixArgb.hpp  MixByte.hpp
src/drawing/pixelblending/: blendArgb.hpp
src/raycasting/: DepthIntersection.hpp  DirectionalLight.hpp  Intersection.hpp  Ray.hpp
src/raycasting/cameras/: Orthogonal.hpp  OrthogonalVolume.hpp
src/raycasting/csg/: makeUnion.hpp
src/raycasting/shapes/: makeCone.hpp  makeQuad.hpp  makeSphere.hpp
src/raycasting/transform/: translate.hpp
src/raycasting/volumes/: makeSphere.hpp
unused/: simdtest.cpp  template-dispatch.cpp
util/: ErrorOrSuccess.hpp  NoCopyNoMove.hpp  Stopwatch.hpp  fillFast.hpp  function_traits.hpp  gcc_vec_types.hpp  glmprint.hpp
